# devboy-tools

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml
.github/workflows/: ci.yml  deploy-docs.yml  fixtures-update.yml  release.yml
crates/devboy-cli/: Cargo.toml
crates/devboy-cli/src/: commands.rs  lib.rs  main.rs
crates/devboy-cli/tests/: github_test.rs  pipeline_test.rs
crates/devboy-cli/tests/common/: api_result.rs  mod.rs  test_provider.rs
crates/devboy-cli/tests/fixtures/github/: issues.json  pull_requests.json
crates/devboy-cli/tests/fixtures/gitlab/: issues.json  merge_requests.json
crates/devboy-core/: Cargo.toml
crates/devboy-core/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
crates/devboy-github/: Cargo.toml
crates/devboy-github/src/: client.rs
crates/devboy-gitlab/: Cargo.toml
crates/devboy-mcp/: Cargo.toml
crates/devboy-mcp/src/: handlers.rs  lib.rs  protocol.rs  server.rs  tools.rs  transport.rs
crates/devboy-storage/: Cargo.toml
crates/devboy-storage/src/: lib.rs
crates/plugins/api/clickup/: Cargo.toml
crates/plugins/api/clickup/src/: client.rs  lib.rs  types.rs
crates/plugins/api/github/: Cargo.toml
crates/plugins/api/github/src/: client.rs  lib.rs  types.rs
crates/plugins/api/gitlab/: Cargo.toml
crates/plugins/api/gitlab/src/: client.rs  lib.rs  types.rs
crates/plugins/api/jira/: Cargo.toml
crates/plugins/api/jira/src/: client.rs  lib.rs  types.rs
crates/plugins/pipeline/: Cargo.toml
crates/plugins/pipeline/src/: lib.rs  markdown.rs  truncation.rs
docs/: index.md  package.json  pnpm-lock.yaml  rspress.config.ts
docs/components/: ConfigExtractor.module.css  ConfigExtractor.tsx  RepoConfigExtractor.module.css  RepoConfigExtractor.tsx
docs/getting-started/: index.md  quick-start.md
docs/integrations/: clickup.mdx  github.mdx  gitlab.mdx  jira.mdx
npm/devboy-tools/: README.md  index.d.ts  index.js  package.json
npm/devboy-tools-darwin-arm64/: package.json
npm/devboy-tools-darwin-x64/: package.json
npm/devboy-tools-linux-arm64/: package.json
npm/devboy-tools-linux-x64/: package.json
npm/devboy-tools-win32-x64/: package.json
scripts/: test-mcp.sh
tests/common/: mod.rs
tests/fixtures/github/: issues.json  pull_requests.json
