[workspace]
resolver = "2"

members = [
    "crates/devboy-core",
    "crates/devboy-storage",
    "crates/devboy-mcp",
    "crates/devboy-cli",
    # API plugins
    "crates/plugins/api/gitlab",
    "crates/plugins/api/github",
    # Pipeline plugins
    "crates/plugins/pipeline",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/meteora-pro/devboy-tools"
authors = ["Meteora <dev@meteora.pro>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
toml = "0.8"
dirs = "6.0"

# Testing
mockall = "0.13"
insta = { version = "1.41", features = ["json", "yaml"] }
httpmock = "0.8"
tempfile = "3.15"
