[package]
name = "devboy-storage"
description = "Secure credential storage using OS keychain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
devboy-core = { path = "../devboy-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Keychain access
keyring = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
