[package]
name = "devboy-github"
description = "GitHub provider implementation for devboy-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
devboy-core = { path = "../../../devboy-core" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
