[package]
name = "devboy-gitlab"
description = "GitLab provider implementation for devboy-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
devboy-core = { path = "../../../devboy-core" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
httpmock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
